--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,7 +10,7 @@ body:
 
         Before you open a new issue, search through the [existing issues][ei] to see if others have had the same problem.
 
-        [ei]: https://github.com/mguyard/appdaemon-covermanager/issues?q=is%3Aissue+label%3A%22Bug%22+
+        [ei]: https://github.com/mguyard/appdaemon-covermanager/labels/bug
 
   - type: textarea
     attributes:
@@ -137,6 +137,6 @@ body:
           required: true
         - label: This issue only contains 1 issue (if you have multiple issues, open one issue for each issue).
           required: true
-        - label: This issue is not a duplicate issue of currently [previous issues](https://github.com/mguyard/appdaemon-covermanager/issues?q=is%3Aissue+label%3A%22Bug%22+)..
+        - label: This issue is not a duplicate issue of currently [previous issues](https://github.com/mguyard/appdaemon-covermanager/labels/bug)..
           required: true
   
