--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -10,7 +10,7 @@ body:
         
         Before you open a new feature request, search through the existing [feature requests][fr] to see if others have had the same idea.
 
-        [fr]: https://github.com/mguyard/appdaemon-covermanager/issues?q=is%3Aissue+label%3A%22🚀%20feature-request%22+
+        [fr]: https://github.com/mguyard/appdaemon-covermanager/labels/%F0%9F%9A%80%20feature-request
 
   - type: textarea
     attributes:
@@ -49,5 +49,5 @@ body:
           required: true
         - label: This only contains 1 feature request (if you have multiple feature requests, open one feature request for each feature request).
           required: true
-        - label: This issue is not a duplicate feature request of [previous feature requests](https://github.com/mguyard/appdaemon-covermanager/issues?q=is%3Aissue+label%3A%22Feature+Request%22+).
+        - label: This issue is not a duplicate feature request of [previous feature requests](https://github.com/mguyard/appdaemon-covermanager/labels/%F0%9F%9A%80%20feature-request).
           required: true
